Created the portifolio logic
